--- a/app.html
+++ b/app.html
@@ -15,6 +15,7 @@
             <div class="texts">
             </div>
             <button id="startBtn" style="padding: 1rem;margin: auto;">start</button>
+            <button id="checkBtn" style="padding: 1rem;margin: auto;">Check vibration button</button>
         </div>
     </section>
     <script src="./main.js"></script>
