--- a/app.html
+++ b/app.html
@@ -16,6 +16,7 @@
             </div>
             <button id="startBtn" style="padding: 1rem;margin: auto;">start</button>
             <button id="checkBtn" style="padding: 1rem;margin: auto;">Check vibration button</button>
+            <button>test</button>
         </div>
     </section>
     <script src="./main.js"></script>
